[project]
name = "notagen-mw"
description = "Symbolic Music Generation, NotaGen node for ComfyUI."
version = "2.2.10"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/billwuhao/ComfyUI_NotaGen"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mw"
DisplayName = "ComfyUI_NotaGen"
Icon = ""
